# UnrealModLoader

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  ModLoaderInfo.ini  README.md  UnrealModLoader.sln  starwarsjedifallenorder.profile
.github/workflows/: release.yml
ExampleMod/: CMakeLists.txt  ExampleMod.cpp  ExampleMod.h  ExampleMod.vcxproj  ExampleMod.vcxproj.filters  dllmain.cpp
LoaderAutoInjector/: CMakeLists.txt  LoaderAutoInjector.vcxproj
LoaderAutoInjector/Loader/: Loader.cpp
LoaderAutoInjector/xinput1_3/: xinput1_3.cpp
Profiles/: ARD-Win64-Shipping.profile  AdvancedExampleGame.profile  BasicExampleGame.profile  BillieBustUp-Win64-Shipping.profile  ChernobylGame-Win64-Shipping.profile  DarksidersGenesis-Win64-Shipping.profile  Dungeonhaven-Win64-Shipping.profile  GGST-Win64-Shipping.profile  Ghostrunner-Win64-Shipping.profile  IndianaEpicGameStore-Win64-Shipping.profile  KINGDOM HEARTS 0.2 Birth by Sleep.profile  KINGDOM HEARTS III.profile  Maine-Win64-Shipping.profile  Medieval_Dynasty-Win64-Shipping.profile  Necromunda-Win64-Shipping.profile  OH_MR_KRABS-Win64-Shipping.profile  OMD-Win64-Shipping.profile  Octopath_Traveler-Win64-Shipping.profile  PROA34-Win64-Shipping.profile  Playtime_Prototype4-Win64-Shipping.profile  ProjectN-Win64-Shipping.profile  RPG-Win64-Shipping.profile  Remnant-Win64-Shipping.profile  SanAndreas.profile  Seven-Win64-Shipping.profile  TheAscent-Win64-Shipping.profile  Tropico6-Win64-Shipping.profile  UNDEFEATED-Win64-Shipping.profile  WeirdWest-Win64-Shipping.profile  Zedfest.profile  starwarsjedifallenorder.profile
UnrealCppLoader/: CMakeLists.txt  dllmain.cpp
UnrealCppLoader/GameInfo/: GameInfo.cpp
UnrealCppLoader/Log/: Log.cpp  Log.h
UnrealCppLoader/Memory/: CoreModLoader.cpp  CoreModLoader.h  Pattern.h  PatternScanner.h  mem.h
UnrealCppLoader/Mod/: Mod.cpp  Mod.h
UnrealCppLoader/Shared/: Hooks.cpp  Hooks.h  LoaderUI.cpp  LoaderUI.h  UCPPLDefs.h
UnrealCppLoader/UE4/: Basic.cpp  Basic.hpp  Ue4.hpp
UnrealCppLoader/Utilities/: Dumper.cpp  Globals.h  MinHook.h  Version.h
UnrealEngineModLauncher/: CMakeLists.txt  UnrealEngineModLauncher.aps  UnrealEngineModLauncher.cpp  UnrealEngineModLauncher.rc  UnrealEngineModLauncher.vcxproj  UnrealEngineModLauncher.vcxproj.filters  resource.h
UnrealEngineModLoader/: CMakeLists.txt  EventSystem.h  Hooks.cpp  Lib.h  LoaderUI.cpp  LoaderUI.h  PakLoader.cpp  PakLoader.h  UMLDefs.h  UnrealEngineModLoader.sln  UnrealEngineModLoader.vcxproj  UnrealEngineModLoader.vcxproj.filters  dllmain.cpp
UnrealEngineModLoader/GameInfo/: GameInfo.cpp  GameInfo.h  GameSettings.cpp  GameSettings.h
UnrealEngineModLoader/INI/: INI.h
UnrealEngineModLoader/ImGui/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_win32.cpp  imgui_impl_win32.h  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
UnrealEngineModLoader/Log/: Log.cpp
UnrealEngineModLoader/Memory/: CoreModLoader.cpp  Pattern.cpp  Pattern.h  PatternScanner.cpp  mem.cpp  mem.h
UnrealEngineModLoader/MinHook/include/: MinHook.h
UnrealEngineModLoader/Mod/: Mod.cpp  Mod.h
UnrealEngineModLoader/Shared/: Hooks.cpp  LoaderUI.cpp  LoaderUI.h  PakLoader.cpp
UnrealEngineModLoader/UE4/: Basic.cpp  Basic.hpp  CoreUObject_classes.hpp  CoreUObject_functions.cpp  CoreUObject_structs.hpp  Ue4.hpp
UnrealEngineModLoader/UnrealEngineModLoader/: dllmain.cpp
UnrealEngineModLoader/UnrealEngineModLoader/GameInfo/: GameInfo.cpp  GameInfo.h
UnrealEngineModLoader/UnrealEngineModLoader/Memory/: CoreModLoader.cpp  CoreModLoader.h  mem.cpp  mem.h
UnrealEngineModLoader/UnrealEngineModLoader/Mod/: Mod.cpp  Mod.h
UnrealEngineModLoader/UnrealEngineModLoader/Utilities/: Dumper.cpp  Dumper.h  EngineDefFinder.cpp  EngineDefFinder.h  Globals.cpp  Globals.h  Logger.cpp  Logger.h  MinHook.h  Pattern.h  Version.h
UnrealEngineModLoader/Utilities/: Dumper.cpp  EngineDefFinder.cpp  Globals.cpp  Globals.h  Logger.h  MinHook.h
UnrealModLauncher/: App.xaml  App.xaml.cs  GameDetailsWindow.xaml  GameDetailsWindow.xaml.cs  GameInfo.cs  MainWindow.xaml  MainWindow.xaml.cs  UnrealModLauncher.csproj
UnrealModLauncher/Converters/: GamePathToImageConverter.cs
UnrealModLauncher/Utilities/: ProcessManager.cs  Serializer.cs  TaskHelpers.cs  WeakEventManager.cs
UnrealModLauncher/Utilities/Commands/: AsyncCommand.cs  CommandUtils.cs  IAsyncCommand.cs
UnrealModLauncher/Utilities/Commands/Exceptions/: InvalidCommandParameterException.cs
UnrealModLoader/: GameInfo.h  UnrealModLoader.cpp  UnrealModLoader.h  UnrealModLoader.vcxproj  UnrealModLoader.vcxproj.filters
UnrealModLoader/INI/: INI.h
UnrealModLoader/Memory/: EngineDefFinder.cpp  EngineDefFinder.h  FunctionGrabber.cpp  FunctionGrabber.h  Memory.cpp  Memory.h  VariableGrabber.cpp  VariableGrabber.h
UnrealModLoader/ModLoader/: HookManager.cpp  HookManager.h  ModLoader.cpp  ModLoader.h
UnrealModLoader/UE4/: Ue4.hpp
UnrealModLoader/UE4/Containers/: Array.h  EnumAsByte.h  UnrealString.h
UnrealModLoader/UE4/Engine/: EngineBaseTypes.h  World.cpp  World.h
UnrealModLoader/UE4/GameFramework/: Actor.cpp  Actor.h
UnrealModLoader/UE4/Internationalization/: Text.h
UnrealModLoader/UE4/Math/: Box.h  Box2D.h  Color.h  OrientedBox.h  Plane.h  Quat.h  Rotator.h  TransformNonVectorized.h  Vector.h  Vector2D.h  Vector4.h
UnrealModLoader/UE4/SlateCore/Layout/: Margin.h
UnrealModLoader/UE4/SlateCore/Styling/: SlateColor.h  SlateTypes.h
UnrealModLoader/UE4/UMG/: UMGBaseTypes.h
UnrealModLoader/UE4/UMG/Animation/: WidgetAnimation.cpp  WidgetAnimation.h
UnrealModLoader/UE4/UObject/: Class.cpp  Class.h  CoreTypes.h  NameEntryArray.h  NamePool.h  NameType.h  Object.cpp  Object.h  UObjectArray.h  UnrealType.cpp  UnrealType.h
UnrealModLoader/UEGUI/: UEGUI.cpp  UEGUI.h  UEWidget.cpp  UEWidget.h
UnrealModLoader/Utilities/: Logger.cpp  Logger.h  MinHook.h  Utility.cpp  Utility.h
xinput1_3/: CMakeLists.txt  dllmain.cpp  xinput1_3.asm  xinput1_3.def
(+15 files in other folders)
